--- a/package.json
+++ b/package.json
@@ -11,6 +11,20 @@
 	},
 	"dependencies": {
 		"@astrojs/image": "^0.15.1",
-		"astro": "^2.0.16"
+		"astro": "^2.0.16",
+		"sharp": "^0.31.3"
+	},
+	"devDependencies": {
+		"@types/eslint": "^8.21.1",
+		"@types/prettier": "^2.7.2",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
+		"eslint": "^8.35.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-astro": "^0.23.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.8.4",
+		"prettier-plugin-astro": "^0.8.0",
+		"typescript": "^4.9.5"
 	}
 }
