--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/image": "^0.15.1",
-		"astro": "^2.0.17",
-		"sharp": "^0.31.3"
+		"astro": "^4.5.9",
+		"astro-expressive-code": "^0.33.5",
+		"sharp": "^0.33.3"
 	},
 	"devDependencies": {
-		"@types/eslint": "^8.21.1",
-		"@types/prettier": "^2.7.2",
-		"@typescript-eslint/eslint-plugin": "^5.54.0",
-		"@typescript-eslint/parser": "^5.54.0",
-		"eslint": "^8.35.0",
-		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-astro": "^0.23.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"prettier": "^2.8.4",
-		"prettier-plugin-astro": "^0.8.0",
-		"typescript": "^4.9.5"
+		"@types/eslint": "^8.56.6",
+		"@typescript-eslint/eslint-plugin": "^7.4.0",
+		"@typescript-eslint/parser": "^7.4.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-astro": "^0.33.1",
+		"eslint-plugin-prettier": "^5.1.3",
+		"prettier": "^3.2.5",
+		"prettier-plugin-astro": "^0.13.0",
+		"typescript": "^5.4.3"
 	}
 }
